syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


package chat;

service Chat {
  rpc GetMessages(google.protobuf.Empty) returns (MessagesList);
  rpc StopStreaming(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc SendMessage(Message) returns (google.protobuf.Empty);
  rpc StartAnswersStream(google.protobuf.Empty) returns (stream Message);
}

message MessageRequest {
  int32 id = 1;
  string message = 2;
}

message MessagesList {
  repeated Message messages = 1;
}
message Message {
  int32 id = 1;
  string text = 2;
  google.protobuf.Timestamp time = 3;
} 